# reddit-ideas-scanner

./: .env.example  .gitignore  LICENSE  PROJECT_MILESTONES.md  README.md  config.toml.example  pyproject.toml
reddit_ideas/: __init__.py  cli.py  config.py  extractor.py  llm_assessor.py  models.py  notifiers.py  pipeline.py  reddit_client.py  reporting.py  storage.py
scripts/: run_daily.ps1
tests/: test_cli.py  test_extractor.py  test_llm_assessor.py  test_notifiers.py  test_pipeline.py  test_reddit_client.py  test_reporting.py
